...
         "Keyboard Distance From TextField",
         "Layout If Needed on Update"],
        ["Enable AutoToolbar",
         "Toolbar Manage Behaviour",
         "Should Toolbar Uses TextField TintColor",
         "Should Show TextField Placeholder",
         "Placeholder Font",
         "Toolbar Tint Color",
         "Toolbar Done BarButtonItem Image",
         "Toolbar Done Button Text"],
        ["Override Keyboard Appearance",
         "UIKeyboard Appearance"],
        ["Should Resign On Touch Outside"],
...
                return
            }

            if selectedIndexPath.section == 1 && selectedIndexPath.row == 1 {

                controller.title = "Toolbar Manage Behaviour"
                controller.options = ["IQAutoToolbar By Subviews", "IQAutoToolbar By Tag", "IQAutoToolbar By Position"]
                controller.selectedIndex = IQKeyboardToolbarManager.shared.toolbarConfiguration.manageBehavior.hashValue

            } else if selectedIndexPath.section == 1 && selectedIndexPath.row == 4 {

                controller.title = "Fonts"
                controller.options = ["Bold System Font", "Italic system font", "Regular"]
                controller.selectedIndex = IQKeyboardToolbarManager.shared.toolbarConfiguration.manageBehavior.hashValue

                let fonts = [UIFont.boldSystemFont(ofSize: 12),
                             UIFont.italicSystemFont(ofSize: 12),
                             UIFont.systemFont(ofSize: 12)]

...
