...
                        <rect key="frame" x="0.0" y="0.0" width="320" height="528"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="NOA-Dm-cuz">
                                <items>
                                    <navigationItem id="3HJ-uW-3hn">
                                        <barButtonItem key="leftBarButtonItem" title="Done" style="done" id="WYi-yp-eM6">
                                            <connections>
                                                <action selector="done" destination="ObA-dk-sSI" id="Qdu-qn-U6V"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
